Unit tests moved to sorcer-api, integration tests renamed to sorcer-int-tests
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@219 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/modules/sorcer-tests/int-tests/pom.xml
+++ b/iGrid/modules/sorcer-tests/int-tests/pom.xml
@@ -9,7 +9,7 @@
 		<version>11.1</version>
 	</parent>
 
-	<artifactId>tests</artifactId>
+	<artifactId>int-tests</artifactId>
 	<name>SORCER sorcer-int-tests :: Tests</name>
 
 	<dependencies>
