--- a/iGrid/modules/tools/boot/pom.xml
+++ b/iGrid/modules/tools/boot/pom.xml
@@ -67,6 +67,11 @@
             <scope>runtime</scope>
         </dependency>
 		<dependency>
+			<groupId>net.jini.lookup</groupId>
+			<artifactId>serviceui</artifactId>
+			<version>${v.jini}</version>
+		</dependency>
+		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 			<version>1.0.11</version>
