Fixed destroyNode, switched platform.xml to local classpath
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@226 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/pom.xml
+++ b/iGrid/pom.xml
@@ -96,6 +96,17 @@
 		    </includes>
 		    <followSymlinks>false</followSymlinks>
 		  </fileset>
+		  <fileset>
+		    <directory>logs/</directory>
+		    <includes>
+		      <include>remote/*</include>
+		      <include>*</include>
+		    </includes>
+		    <excludes>
+		      <exclude>remote</exclude>		      
+		    </excludes>
+		    <followSymlinks>false</followSymlinks>
+		  </fileset>
 		</filesets>
 	      </configuration>
 	    </plugin>
