Fixed scripts and classpath for browser
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@227 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/modules/tools/ssb/pom.xml
+++ b/iGrid/modules/tools/ssb/pom.xml
@@ -40,14 +40,31 @@
             <artifactId>AppleJavaExtensions</artifactId>
             <version>1.4</version>
         </dependency>
-	 	<dependency>
+	<dependency>
             <groupId>org.rioproject</groupId>
             <artifactId>rio-platform</artifactId>
         </dependency>
-	 	<dependency>
+ 	<dependency>
             <groupId>net.jini</groupId>
             <artifactId>jsk-platform</artifactId>
         </dependency>
+ 	<dependency>
+            <groupId>net.jini.lookup</groupId>
+            <artifactId>serviceui</artifactId>
+	    <version>${v.jini}</version>
+        </dependency>
+        <dependency>
+            <groupId>au.net.Zeus</groupId>
+            <artifactId>reference-collections</artifactId>
+            <version>1.0.1</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.boundary</groupId>
+            <artifactId>high-scale-lib</artifactId>
+            <version>1.0.4-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>   
     </dependencies>
 
     <build>
