--- a/iGrid/modules/tools/pom.xml
+++ b/iGrid/modules/tools/pom.xml
@@ -22,10 +22,9 @@
 		<module>boot</module>
 		<module>shell</module>
 		<module>ssb</module>
-		<module>sorcer-provider</module>
 <!--		<module>sorcer-maven-plugin</module> -->
 
-		<!-- force download implicite dependencies -->
+		<!-- force download implicit dependencies -->
 		<module>dependencies</module>
 	</modules>
 </project>
