--- a/iGrid/modules/tools/dependencies/pom.xml
+++ b/iGrid/modules/tools/dependencies/pom.xml
@@ -1,6 +1,6 @@
 <project
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+		xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
 	<modelVersion>4.0.0</modelVersion>
 
@@ -11,12 +11,49 @@
 	</parent>
 
 	<artifactId>dependencies</artifactId>
-	<packaging>jar</packaging>
+	<packaging>pom</packaging>
 	<name>SORCER tools :: dependencies</name>
 	<description>SORCER dummy module that downloads libraries required at runtime and installs them in the local maven repository</description>
 	<url>http://sorcersoft.org/</url>
 
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>install</phase>
+						<goals>
+							<goal>java</goal>
+						</goals>
+						<configuration>
+							<executableDependency>
+								<groupId>org.sorcersoft.sigar</groupId>
+								<artifactId>sigar-maven</artifactId>
+							</executableDependency>
+							<mainClass>org.sorcersoft.sigar.Zip</mainClass>
+							<arguments>
+								<argument>org.sorcersoft.sigar:sigar:zip:native:1.6.4</argument>
+							</arguments>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+
 	<dependencies>
+		<dependency>
+			<groupId>org.sorcersoft.sigar</groupId>
+			<artifactId>sigar-maven</artifactId>
+			<version>1.6.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.sorcersoft.sigar</groupId>
+			<artifactId>sigar</artifactId>
+			<version>1.6.4</version>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.river</groupId>
 			<artifactId>outrigger</artifactId>
