migrate platform config to groovy
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@236 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/modules/tools/boot/pom.xml
+++ b/iGrid/modules/tools/boot/pom.xml
@@ -22,8 +22,8 @@
 
     <dependencies>
 		<dependency>
-		<groupId>org.sorcersoft.sorcer</groupId>
-		<artifactId>sorcer-const</artifactId>
+			<groupId>org.sorcersoft.sorcer</groupId>
+			<artifactId>sorcer-const</artifactId>
             <version>11.1</version>
 		</dependency>
 		<dependency>
@@ -35,7 +35,7 @@
             <groupId>net.jini</groupId>
             <artifactId>jsk-platform</artifactId>
         </dependency>
-		<!--FIXME remove-->
+		<!--FIXME remove?-->
         <dependency>
             <groupId>org.rioproject</groupId>
             <artifactId>rio-platform</artifactId>
