--- a/iGrid/modules/sorcer-const/pom.xml
+++ b/iGrid/modules/sorcer-const/pom.xml
@@ -20,5 +20,14 @@
             <artifactId>jsk-lib</artifactId>
             <version>${v.jini}</version>
         </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+		</dependency>
+	</dependencies>
 </project>
