Sorcer split into SorcerEnv and Sorcer, sorcer.env props now available in start scripts, added props to sorcer.env. Shell now reads artifacts.
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@239 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/bin/shell/configs/nsh-start.config
+++ b/iGrid/bin/shell/configs/nsh-start.config
@@ -9,24 +9,18 @@
 ##
 ## See http://groovy.codehaus.org/api/org/codehaus/groovy/tools/LoaderConfiguration.html
 ## for the file format
+## !{mvn: } allows to specify artifact coordinates in the format: groupId:Artifact:[version]
 
     # load required libraries
     
-    load !{user.home}/.m2/repository/org/sorcersoft/sorcer/shell/11.1/shell-11.1.jar
-    load !{user.home}/.m2/repository/org/sorcersoft/sorcer/boot/11.1/boot-11.1.jar
-    load !{user.home}/.m2/repository/org/sorcersoft/sorcer/sorcer-api/11.1/sorcer-api-11.1.jar
-    load !{user.home}/.m2/repository/org/sorcersoft/sorcer/sorcer-util/11.1/sorcer-util-11.1.jar
-    load !{user.home}/.m2/repository/org/rioproject/rio-platform/5.0-M2/rio-platform-5.0-M2.jar
-    load !{user.home}/.m2/repository/org/codehaus/groovy/groovy-all/2.0.6/groovy-all-2.0.6.jar
-    load !{user.home}/.m2/repository/net/jini/lookup/serviceui/2.2.1/serviceui-2.2.1.jar
+    load !{mvn:org.sorcersoft.sorcer:shell}
+    load !{mvn:org.sorcersoft.sorcer:boot}
+    load !{mvn:org.sorcersoft.sorcer:sorcer-api}
+    load !{mvn:org.sorcersoft.sorcer:sorcer-util}
+    load !{mvn:org.rioproject:rio-platform}
+    load !{mvn:org.codehaus.groovy:groovy-all}
+    load !{mvn:net.jini.lookup:serviceui}
     
-    #load !{iGrid.home}/lib/sorcer/lib-ext/shell.jar
-    #load !{iGrid.home}/lib/sorcer/lib/sorcer-prv.jar
-    #load !{iGrid.home}/lib/common/groovy/groovy-all-1.7.4.jar
-    #load !{iGrid.home}/lib/river/lib/serviceui.jar
-    #load !{iGrid.home}/lib/rio/rio.jar
-    #load !{iGrid.home}/lib/common/jep-2.4.1a.jar
-
     # load user specific libraries
     load !{user.home}/.nsh/lib/*.jar
  	load !{iGrid.home}/lib/sorcer/lib/arithmetic-beans.jar
