--- a/iGrid/configs/boot-iGrid-min-http.config
+++ b/iGrid/configs/boot-iGrid-min-http.config
@@ -6,6 +6,7 @@ import sorcer.provider.boot.SorcerDescriptorUtil;
 import sorcer.provider.boot.SorcerServiceDescriptor;
 
 import sorcer.util.ArtifactCoordinates;
+import sorcer.core.SorcerEnv;
 
 // Phoenix activation service
 // Reggie service registrar and lookup service
@@ -19,13 +20,10 @@ com.sun.jini.start {
     home = "${iGrid.home}";
     policy = "${java.security.policy}";
     ps = System.getProperty("path.separator");
-    river_version="2.2.1";
-    blitz_version="2.1.7";
 
     // webster root directories
     jiniLibPath 	 = home + "${/}lib${/}river${/}lib";
     jiniLibDLPath    = home + "${/}lib${/}river${/}lib-dl";
-    //rioLibPath 		 = home + "${/}lib${/}rio${/}lib";
     deployPath 		 = home + "${/}deploy";
     httpData 		 = home + "${/}data";
      
@@ -35,14 +33,14 @@ com.sun.jini.start {
     startPort = Booter.getWebsterStartPort();
     endPort = Booter.getWebsterEndPort();
 	
-    repo = "${user.home}/.m2/repository/";
+    repo = SorcerEnv.getRepoDir() + "/";
     
     serviceDescriptors = new ServiceDescriptor[] {
         /* SORCER Webster, set to serve up 10 directories */
         // (String policy, int port, String[] roots, String address, int startPort, int endPort, boolean debug, boolean isDaemon)
         SorcerDescriptorUtil.getWebster(policy,
                                          port,
-                                         new String[] { //rioLibPath,
+                                         new String[] { 
                                                         jiniLibPath,
                                                         httpData,
                                                         deployPath,
@@ -64,46 +62,46 @@ com.sun.jini.start {
 */
 
 	    new SorcerServiceDescriptor(
-	      	""+new ArtifactCoordinates("org.apache.river","reggie-dl",river_version),
+	      	""+new ArtifactCoordinates("org.apache.river","reggie-dl"),
             policy,
-            repo + new ArtifactCoordinates("org.apache.river","reggie",river_version),
+            repo + new ArtifactCoordinates("org.apache.river","reggie"),
             "com.sun.jini.reggie.TransientRegistrarImpl",
             new String[] { home + "${/}bin${/}jini${/}configs${/}reggie.config" }),
             
 		new SorcerServiceDescriptor(
-	    	""+new ArtifactCoordinates("org.apache.river","mahalo-dl",river_version),
+	    	""+new ArtifactCoordinates("org.apache.river","mahalo-dl"),
             policy,
-            repo + new ArtifactCoordinates("org.apache.river","mahalo",river_version),
+            repo + new ArtifactCoordinates("org.apache.river","mahalo"),
             "com.sun.jini.mahalo.TransientMahaloImpl",
             new String[] { home + "${/}bin${/}jini${/}configs${/}mahalo.config" }),
 
 /*
        new SorcerServiceDescriptor(
-	      	"" + new ArtifactCoordinates("org.apache.river","fiddler-dl",river_version),
+	      	"" + new ArtifactCoordinates("org.apache.river","fiddler-dl"),
             policy,
-            repo + new ArtifactCoordinates("org.apache.river","fiddler",river_version),
+            repo + new ArtifactCoordinates("org.apache.river","fiddler"),
            "com.sun.jini.fiddler.TransientFiddlerImpl",
             new String[] { home + "${/}bin${/}jini${/}configs${/}fiddler.config" }),
 
         new SorcerServiceDescriptor(
-	      	"" + new ArtifactCoordinates("org.apache.river","mercury-dl",river_version),
+	      	"" + new ArtifactCoordinates("org.apache.river","mercury-dl"),
             policy,
-            repo + new ArtifactCoordinates("org.apache.river","mercury",river_version),
+            repo + new ArtifactCoordinates("org.apache.river","mercury"),
             "com.sun.jini.mercury.TransientMercuryImpl",
             new String[] { home + "${/}bin${/}jini${/}configs${/}mercury.config" }),
 
 
         new SorcerServiceDescriptor(
-	      	"" + new ArtifactCoordinates("org.apache.river","norm-dl",river_version),
+	      	"" + new ArtifactCoordinates("org.apache.river","norm-dl"),
             policy,
-            repo + new ArtifactCoordinates("org.apache.river","norm",river_version),
+            repo + new ArtifactCoordinates("org.apache.river","norm"),
             "com.sun.jini.norm.TransientNormServerImpl",
             new String[] { home + "${/}bin${/}jini${/}configs${/}norm.config" }),
             
         new SorcerServiceDescriptor(
-	      	"" + new ArtifactCoordinates("org.apache.river","outrigger-dl",river_version),
+	      	"" + new ArtifactCoordinates("org.apache.river","outrigger-dl"),
             policy,
-            repo + new ArtifactCoordinates("org.apache.river","outrigger",river_version),
+            repo + new ArtifactCoordinates("org.apache.river","outrigger"),
             "com.sun.jini.outrigger.TransientOutriggerImpl",
             new String[] { home + "${/}bin${/}jini${/}configs${/}outrigger.config" }),
 */
@@ -111,15 +109,15 @@ com.sun.jini.start {
    		// Blitz
 
         new SorcerServiceDescriptor(
- 			new ArtifactCoordinates("org.dancres.blitz","blitz-dl",blitz_version)+" "+ new ArtifactCoordinates("org.dancres.blitz","blitzui",blitz_version),
+ 			new ArtifactCoordinates("org.dancres.blitz","blitz-dl")+" "+ new ArtifactCoordinates("org.dancres.blitz","blitzui"),
             policy, 
             ConfigUtil.concat(new Object[] {
-            	repo, new ArtifactCoordinates("org.dancres.blitz","blitz",blitz_version), ps,
-            	repo, new ArtifactCoordinates("org.dancres.blitz","blitzui",blitz_version), ps,
+            	repo, new ArtifactCoordinates("org.dancres.blitz","blitz"), ps,
+            	repo, new ArtifactCoordinates("org.dancres.blitz","blitzui"), ps,
             	repo, new ArtifactCoordinates("com.sleepycat","je","4.1.21"), ps,
-            	repo, new ArtifactCoordinates("net.jini.lookup","serviceui",river_version), ps,
-            	repo, new ArtifactCoordinates("org.apache.river","outrigger-dl",river_version), ps,
-            	repo, new ArtifactCoordinates("net.jini","jsk-platform",river_version)
+            	repo, new ArtifactCoordinates("net.jini.lookup","serviceui"), ps,
+            	repo, new ArtifactCoordinates("org.apache.river","outrigger-dl"), ps,
+            	repo, new ArtifactCoordinates("net.jini","jsk-platform")
             }),
 	        "org.dancres.blitz.remote.BlitzServiceImpl",
           	new String[] { home + "${/}bin${/}blitz${/}configs${/}blitz.config" }),
@@ -138,7 +136,7 @@ com.sun.jini.start {
             "org.dancres.blitz.jini.lockmgr.ServerImpl",
              new String[] { home + "${/}bin${/}blitz${/}configs${/}lockmgr.config" }),
  */ 
-    		// SORCER Job Service 
+   		// SORCER Job Service 
        		SorcerDescriptorUtil.getJobber(
        			policy,
        			home + "${/}modules${/}providers${/}jobber${/}jobber-service${/}src${/}main${/}resources${/}META-INF${/}sorcer${/}services.config"),
