--- a/iGrid/configs/sorcer.env
+++ b/iGrid/configs/sorcer.env
@@ -2,17 +2,22 @@
 
 # The OS environment variable IGRID_HOME must be set
 
+# Local jar repository, in a development environment it should 
+# point to the local maven repository location
+#sorcer.local.repo.location = ${user.home}/.m2/repository
+sorcer.local.repo.location = ${user.home}/sorcer_repo
+
 # use provider names suffixed with the OS user name
 sorcer.provider.name.suffixed = true
 # custom suffix for provider names
-sorcer.provider.name.suffix = MWS
+sorcer.provider.name.suffix = DEV
 
 # Groups to register/lookup
-provider.groups=sorcer.TEST-MWS
-provider.space.group=sorcer.TEST-MWS
+provider.groups=sorcer.TEST-DEV
+provider.space.group=sorcer.TEST-DEV
 provider.space.name=Blitz Space
 #provider.worker.transactional=true
-worker.transactiona.lease.time=50000
+worker.transactional.lease.time=50000
 
 # Service discovery/lookup
 lookup.cache.enabled=false
@@ -41,7 +46,6 @@ dataspace.storer.name=Dataspace Storage
 provider.webster.interface=${localhost}
 #provider.webster.interface=10.131.5.101
 provider.webster.port=50001
-#provider.webster.interface=10.211.55.2
 
 # Data/file repository configuration
 # Scratch directory format: 
@@ -67,4 +71,9 @@ system.webster.interface=${provider.webster.interface}
 system.webster.port=${provider.webster.port}
 
 
-
+sorcer.lib.river.version = 2.2.1
+sorcer.lib.blitz.version = 2.1.7
+sorcer.lib.rio.version = 5.0-M2
+sorcer.lib.sleepycat.version = 4.1.21
+sorcer.lib.groovy.version = 2.1.2
+sorcer.version = 11.1
