--- a/iGrid/configs/startup-boot-prv.config
+++ b/iGrid/configs/startup-boot-prv.config
@@ -6,6 +6,7 @@ import sorcer.provider.boot.Booter;
 import sorcer.provider.boot.SorcerDescriptorUtil;
 import com.sun.jini.start.ServiceDescriptor;
 import sorcer.provider.boot.SorcerServiceDescriptor;
+import sorcer.core.SorcerEnv;
 
 com.sun.jini.start {
  	home = "${iGrid.home}";
@@ -13,7 +14,7 @@ com.sun.jini.start {
 	jiniLibPath 	= home + "${/}lib${/}river${/}lib";
 	jiniLibDLPath 	= home + "${/}lib${/}river${/}lib-dl";
 	deployPath 		= home + "${/}deploy";
-	repo 			= "${user.home}/.m2/repository/";
+	repo = SorcerEnv.getRepoDir();
 	
 	//port = Booter.getWebsterPort(); 
 	port = 0;
