--- a/iGrid/modules/examples/ex1/ex1-service/src/main/resources/META-INF/sorcer/services.config
+++ b/iGrid/modules/examples/ex1/ex1-service/src/main/resources/META-INF/sorcer/services.config
@@ -5,7 +5,7 @@ import sorcer.provider.boot.Booter;
 import sorcer.provider.boot.SorcerDescriptorUtil;
 import sorcer.provider.boot.SorcerServiceDescriptor;
 import sorcer.util.ArtifactCoordinates;
-
+import sorcer.core.SorcerEnv;
 
 com.sun.jini.start {
 	home = "${iGrid.home}";
@@ -16,7 +16,7 @@ com.sun.jini.start {
     jiniLibPath 	 = home + "${/}lib${/}river${/}lib";
     deployPath 		 = home + "${/}deploy";
     httpData 		 = home + "${/}data";
-	repo 			 = "${user.home}/.m2/repository/";
+	repo 			 = SorcerEnv.getRepoDir() + "/";
 
 	port = 0;
 
