--- a/iGrid/modules/examples/first/first-service/src/main/resources/META-INF/sorcer/services.config
+++ b/iGrid/modules/examples/first/first-service/src/main/resources/META-INF/sorcer/services.config
@@ -5,6 +5,7 @@ import sorcer.provider.boot.Booter;
 import sorcer.provider.boot.SorcerDescriptorUtil;
 import sorcer.provider.boot.SorcerServiceDescriptor;
 import sorcer.util.ArtifactCoordinates;
+import sorcer.core.SorcerEnv;
 
 com.sun.jini.start {
 	home = "${iGrid.home}";
@@ -14,7 +15,7 @@ com.sun.jini.start {
 	// webster root directories
 	jiniLibPath 	= home + "/lib/river/lib";
 	jiniLibDLPath 	= home + "/lib/river/lib-dl";
-	repo 			= "${user.home}/.m2/repository/";
+	repo 			 = SorcerEnv.getRepoDir() + "/";
 	port = 0;
 	
 	serviceDescriptors = new ServiceDescriptor[] {
