--- a/iGrid/modules/tools/shell/configs/nsh-init.config
+++ b/iGrid/modules/tools/shell/configs/nsh-init.config
@@ -4,6 +4,7 @@
 */
 import net.jini.core.discovery.LookupLocator;
 import javax.security.auth.login.LoginContext;
+import sorcer.core.SorcerEnv;
 
 sorcer.tools.shell.NetworkShell {
 
@@ -11,7 +12,8 @@ sorcer.tools.shell.NetworkShell {
 		
 	userName = System.getProperty("user.name");
 	
-	mvnRepo = System.getProperty("user.home") + "/.m2/repository/";
+	mvnRepo = SorcerEnv.getRepoDir() +  "/";
+	//System.getProperty("user.home") + "/.m2/repository/";
 	
 	//groups = new String[] { "sorcer.TEST10" };
 	
@@ -31,7 +33,7 @@ sorcer.tools.shell.NetworkShell {
 	httpRoots = new String[] { mvnRepo };
 	
 	// exported classes for examples 
-	httpJars = new String[] { "arithmetic-dl.jar", "whoIsIt-dl.jar", "worker-dl.jar" };
+	//httpJars = new String[] { "arithmetic-dl.jar", "whoIsIt-dl.jar", "worker-dl.jar" };
 	
 	noHttp = false;
 	
