--- a/iGrid/bin/shell/configs/nsh-init.config
+++ b/iGrid/bin/shell/configs/nsh-init.config
@@ -4,6 +4,7 @@
 */
 import net.jini.core.discovery.LookupLocator;
 import javax.security.auth.login.LoginContext;
+import sorcer.core.SorcerEnv;
 
 sorcer.tools.shell.NetworkShell {
 
@@ -11,7 +12,7 @@ sorcer.tools.shell.NetworkShell {
 		
 	userName = System.getProperty("user.name");
 	
-	mvnRepo = System.getProperty("user.home") + "/.m2/repository/";
+	mvnRepo = SorcerEnv.getRepoDir() + "/";
 	
 	//groups = new String[] { "sorcer.TEST10" };
 	
