--- a/iGrid/modules/sorcer-tests/ju-arithmetic/ju-arithmetic-service/src/main/resources/META-INF/sorcer/services.config
+++ b/iGrid/modules/sorcer-tests/ju-arithmetic/ju-arithmetic-service/src/main/resources/META-INF/sorcer/services.config
@@ -5,6 +5,7 @@ import sorcer.provider.boot.Booter;
 import sorcer.provider.boot.SorcerDescriptorUtil;
 import sorcer.provider.boot.SorcerServiceDescriptor;
 import sorcer.util.ArtifactCoordinates;
+import sorcer.core.SorcerEnv;
 	
 com.sun.jini.start {
 	home = "${iGrid.home}";
@@ -18,8 +19,8 @@ com.sun.jini.start {
 	jiniLibPath 	= home + "${/}lib${/}river${/}lib";
 	jiniLibDLPath 	= home + "${/}lib${/}river${/}lib-dl";
 	deployPath 	= home + "${/}deploy";
-	repo 		= "${user.home}/.m2/repository/";
-    
+	repo 			 = SorcerEnv.getRepoDir() + "/";
+	
 	//port = Booter.getWebsterPort(); 
 	port = 0;
 	//address = Booter.getWebsterInterface();
