Changes in configuration to enable automatic start after download from maven. Added Rio-5.0-M2 to iGrid/lib/rio - needed for resolver. On windows there is a resolver problem
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@243 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/configs/sorcer.env
+++ b/iGrid/configs/sorcer.env
@@ -4,8 +4,8 @@
 
 # Local jar repository, in a development environment it should 
 # point to the local maven repository location
-#sorcer.local.repo.location = ${user.home}/.m2/repository
-sorcer.local.repo.location = ${user.home}/sorcer_repo
+sorcer.local.repo.location = ${user.home}/.m2/repository
+#sorcer.local.repo.location = ${user.home}/sorcer_repo
 
 # use provider names suffixed with the OS user name
 sorcer.provider.name.suffixed = true
