--- a/iGrid/modules/tools/dependencies/pom.xml
+++ b/iGrid/modules/tools/dependencies/pom.xml
@@ -54,6 +54,7 @@
 			<artifactId>sigar</artifactId>
 			<version>1.6.4</version>
 		</dependency>
+		<!-- RIVER -->
 		<dependency>
 			<groupId>org.apache.river</groupId>
 			<artifactId>outrigger</artifactId>
@@ -66,6 +67,67 @@
 			<version>${v.jini}</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.river</groupId>
+			<artifactId>reggie</artifactId>
+			<version>${v.jini}</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.river</groupId>
+			<artifactId>reggie-dl</artifactId>
+			<version>${v.jini}</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.river</groupId>
+			<artifactId>mahalo</artifactId>
+			<version>${v.jini}</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.river</groupId>
+			<artifactId>mahalo-dl</artifactId>
+			<version>${v.jini}</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.river</groupId>
+			<artifactId>fiddler</artifactId>
+			<version>${v.jini}</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.river</groupId>
+			<artifactId>fiddler-dl</artifactId>
+			<version>${v.jini}</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.river</groupId>
+			<artifactId>mercury</artifactId>
+			<version>${v.jini}</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.river</groupId>
+			<artifactId>mercury-dl</artifactId>
+			<version>${v.jini}</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.river</groupId>
+			<artifactId>norm</artifactId>
+			<version>${v.jini}</version>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.river</groupId>
+			<artifactId>norm-dl</artifactId>
+			<version>${v.jini}</version>
+			<scope>runtime</scope>
+		</dependency>		
+		<!-- /RIVER -->
 		<dependency>
 			<groupId>org.dancres.blitz</groupId>
 			<artifactId>blitz</artifactId>
