Deleted old platform.xml files and their invocation in boot -> PlatformLoader
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@244 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/modules/tools/boot/pom.xml
+++ b/iGrid/modules/tools/boot/pom.xml
@@ -43,7 +43,8 @@
         <dependency>
             <groupId>org.rioproject</groupId>
             <artifactId>rio-start</artifactId>
-			<version>5.0-M2_sorcer</version>
+	    <version>${v.rio}</version>
+	    <!-- <version>5.0-M2_sorcer</version> -->
         </dependency>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
