Sorcer-par-modeling created as a separate module, classes moved.
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@251 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/modules/pom.xml
+++ b/iGrid/modules/pom.xml
@@ -27,5 +27,6 @@
         <module>exertlet-ui</module>
         <module>requestor-common</module>
         <module>provider-common</module>
-    </modules>
+	<module>sorcer-par-modeling</module>
+     </modules>
 </project>
