fix maven plugin compilation
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@255 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/modules/tools/pom.xml
+++ b/iGrid/modules/tools/pom.xml
@@ -22,7 +22,7 @@
 		<module>boot</module>
 		<module>shell</module>
 		<module>ssb</module>
-<!--		<module>sorcer-maven-plugin</module> -->
+		<module>sorcer-maven-plugin</module>
 
 		<!-- force download implicit dependencies -->
 		<module>dependencies</module>
