--- a/iGrid/modules/tools/sorcer-maven-plugin/pom.xml
+++ b/iGrid/modules/tools/sorcer-maven-plugin/pom.xml
@@ -19,7 +19,12 @@
 		<dependency>
 			<groupId>org.apache.maven</groupId>
 			<artifactId>maven-plugin-api</artifactId>
-			<version>3.0.4</version>
+			<version>3.0.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.maven</groupId>
+			<artifactId>maven-core</artifactId>
+			<version>3.0.5</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.maven.plugin-tools</groupId>
@@ -43,18 +48,6 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.apache.maven</groupId>
-			<artifactId>maven-core</artifactId>
-			<version>3.0.4</version>
-		</dependency>
-<!--
-		<dependency>
-			<groupId>org.rioproject</groupId>
-			<artifactId>rio-start</artifactId>
-			<version>5.0-M2</version>
-		</dependency>
--->
 	</dependencies>
 
 	<build>
@@ -65,6 +58,7 @@
 				<version>3.2</version>
 				<configuration>
 					<goalPrefix>sorcer</goalPrefix>
+					<skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
 				</configuration>
 				<executions>
 					<execution>
