Deleted unused libraries, temporarily disabled sorcer-maven-plugin
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@257 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/pom.xml
+++ b/iGrid/pom.xml
@@ -70,7 +70,8 @@
     <build>
         <pluginManagement>
             <plugins>
-                <plugin>
+<!--                Temporarily disabled because of a problem when building from scratch
+				<plugin>
 					<groupId>${project.groupId}</groupId>
 					<artifactId>sorcer-maven-plugin</artifactId>
 					<executions>
@@ -85,7 +86,7 @@
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>exec-maven-plugin</artifactId>
                     <version>1.2.1</version>
-                </plugin>
+		  </plugin> -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
