--- a/iGrid/configs/boot-iGrid.config
+++ b/iGrid/configs/boot-iGrid.config
@@ -5,6 +5,9 @@ import sorcer.provider.boot.Booter;
 import sorcer.provider.boot.SorcerDescriptorUtil;
 import sorcer.provider.boot.SorcerServiceDescriptor;
 
+import sorcer.util.ArtifactCoordinates;
+import sorcer.core.SorcerEnv;
+
 // Phoenix activation service
 // Reggie service registrar and lookup service
 // Outrigger JavaSpace
@@ -14,43 +17,41 @@ import sorcer.provider.boot.SorcerServiceDescriptor;
 // Fiddler server side lookup discovery service
 	
 com.sun.jini.start {
-	home = "${iGrid.home}";
-	policy = "${java.security.policy}";
-	ps = System.getProperty("path.separator");
+    home = "${iGrid.home}";
+    policy = "${java.security.policy}";
+    ps = System.getProperty("path.separator");
+
+    // webster root directories
+    jiniLibPath 	 = home + "${/}lib${/}river${/}lib";
+    jiniLibDLPath    = home + "${/}lib${/}river${/}lib-dl";
+    deployPath 		 = home + "${/}deploy";
+    httpData 		 = home + "${/}data";
+     
+    port = Booter.getWebsterPort(); 
+    //port = 0;
+    address = Booter.getWebsterInterface();
+    startPort = Booter.getWebsterStartPort();
+    endPort = Booter.getWebsterEndPort();
 	
-	// webster root directories
-	sorcerLibPath 	= home + "${/}lib${/}sorcer${/}lib";
- 	sorcerLibDlPath = home + "${/}lib${/}sorcer${/}lib-dl";
- 	engLibDlPath    = home + "${/}lib${/}eng${/}lib-dl";
- 	productLibDlPath = home + "${/}..${/}Products${/}lib${/}products${/}lib-dl";
-    jiniLibPath 	= home + "${/}lib${/}river${/}lib";
-    jiniLibDLPath 	= home + "${/}lib${/}river${/}lib-dl";
-    rioLibPath 		= home + "${/}lib${/}rio";
-    blitzLib		= home + "${/}lib${/}common${/}blitz";
-    otherLib		= blitzLib + "${/}thirdpartylib";
-    deployPath 		= home + "${/}deploy";
-    data 		    = home + "${/}data";
-    
-	//port = Booter.getWebsterPort(); 
-	port = 0;
-	//address = Booter.getWebsterInterface();
-	//startPort = Booter.getWebsterStartPort();
-	//endPort = Booter.getWebsterEndPort();
+    repo = SorcerEnv.getRepoDir() + "/";
     
     serviceDescriptors = new ServiceDescriptor[] {
-        /* SORCER Webster, set to serve up root directories */
-        // (String policy, int port, String[] roots, String address, int startPort, int endPort, boolean debug)
-        SorcerDescriptorUtil.getWebster(policy, port,
-                                         new String[] { sorcerLibPath,
-                                         			    sorcerLibDlPath,
-                                         			    engLibDlPath,
-                                         			    productLibDlPath,
-                                         			    jiniLibDLPath,
-                                                        rioLibPath,
+        /* SORCER Webster, set to serve up 10 directories */
+        // (String policy, int port, String[] roots, String address, int startPort, int endPort, boolean debug, boolean isDaemon)
+        SorcerDescriptorUtil.getWebster(policy,
+                                         port,
+                                         new String[] { 
                                                         jiniLibPath,
-                                                        blitzLib,
+                                                        httpData,
                                                         deployPath,
-                                                        data }),
+                                                        repo
+                                                        },
+                                         address,
+                                         startPort,
+                                         endPort,
+                                         true,
+                                         false),
+
 /*
         new SorcerServiceDescriptor(
             "browser-dl.jar jsk-dl.jar",
@@ -60,108 +61,111 @@ com.sun.jini.start {
             new String[] { home + "${/}bin${/}jini${/}configs${/}browser.config" }),
 */
 
-        new SorcerServiceDescriptor(
-            "reggie-dl.jar jsk-dl.jar",
+	    new SorcerServiceDescriptor(
+	      	""+new ArtifactCoordinates("org.apache.river","reggie-dl"),
             policy,
-            jiniLibPath + "/reggie.jar",
+            repo + new ArtifactCoordinates("org.apache.river","reggie"),
             "com.sun.jini.reggie.TransientRegistrarImpl",
             new String[] { home + "${/}bin${/}jini${/}configs${/}reggie.config" }),
-
-
-       new SorcerServiceDescriptor(
-           "fiddler-dl.jar jsk-dl.jar",
-           policy,
-           jiniLibPath + "/fiddler.jar",
-           "com.sun.jini.fiddler.TransientFiddlerImpl",
-           new String[] { home + "${/}bin${/}jini${/}configs${/}fiddler.config" }),
-
-
-        new SorcerServiceDescriptor(
-            "mahalo-dl.jar jsk-dl.jar",
+            
+		new SorcerServiceDescriptor(
+	    	""+new ArtifactCoordinates("org.apache.river","mahalo-dl"),
             policy,
-            jiniLibPath + "/mahalo.jar",
+            repo + new ArtifactCoordinates("org.apache.river","mahalo"),
             "com.sun.jini.mahalo.TransientMahaloImpl",
             new String[] { home + "${/}bin${/}jini${/}configs${/}mahalo.config" }),
 
 
-        new SorcerServiceDescriptor(
-            "mercury-dl.jar jsk-dl.jar",
+       new SorcerServiceDescriptor(
+	      	"" + new ArtifactCoordinates("org.apache.river","fiddler-dl"),
             policy,
-            jiniLibPath + "/mercury.jar",
+            repo + new ArtifactCoordinates("org.apache.river","fiddler"),
+           "com.sun.jini.fiddler.TransientFiddlerImpl",
+            new String[] { home + "${/}bin${/}jini${/}configs${/}fiddler.config" }),
+
+        new SorcerServiceDescriptor(
+	      	"" + new ArtifactCoordinates("org.apache.river","mercury-dl"),
+            policy,
+            repo + new ArtifactCoordinates("org.apache.river","mercury"),
             "com.sun.jini.mercury.TransientMercuryImpl",
             new String[] { home + "${/}bin${/}jini${/}configs${/}mercury.config" }),
 
 
         new SorcerServiceDescriptor(
-            "norm-dl.jar jsk-dl.jar",
+	      	"" + new ArtifactCoordinates("org.apache.river","norm-dl"),
             policy,
-            jiniLibPath + "/norm.jar",
+            repo + new ArtifactCoordinates("org.apache.river","norm"),
             "com.sun.jini.norm.TransientNormServerImpl",
             new String[] { home + "${/}bin${/}jini${/}configs${/}norm.config" }),
             
-/*
         new SorcerServiceDescriptor(
-            "outrigger-dl.jar jsk-dl.jar",
+	      	"" + new ArtifactCoordinates("org.apache.river","outrigger-dl"),
             policy,
-            jiniLibPath + "/outrigger.jar",
+            repo + new ArtifactCoordinates("org.apache.river","outrigger"),
             "com.sun.jini.outrigger.TransientOutriggerImpl",
             new String[] { home + "${/}bin${/}jini${/}configs${/}outrigger.config" }),
-*/
+
 
    		// Blitz
+
         new SorcerServiceDescriptor(
- 			"blitz-dl.jar blitzui.jar",
+ 			new ArtifactCoordinates("org.dancres.blitz","blitz-dl")+" "+ new ArtifactCoordinates("org.dancres.blitz","blitzui"),
             policy, 
             ConfigUtil.concat(new Object[] {
-            	blitzLib, "${/}blitz.jar",
-            	ps, blitzLib, "${/}blitzui.jar",
-            	ps, home, "${/}lib${/}common${/}je.jar",
-            	ps, jiniLibPath, "${/}serviceui.jar",
-            	ps, home, "${/}lib${/}river${/}lib-dl${/}outrigger-dl.jar",
-            	ps, jiniLibPath, "${/}jsk-platform.jar" }
-            	),
+            	repo, new ArtifactCoordinates("org.dancres.blitz","blitz"), ps,
+            	repo, new ArtifactCoordinates("org.dancres.blitz","blitzui"), ps,
+            	repo, new ArtifactCoordinates("com.sleepycat","je","4.1.21"), ps,
+            	repo, new ArtifactCoordinates("net.jini.lookup","serviceui"), ps,
+            	repo, new ArtifactCoordinates("org.apache.river","outrigger-dl"), ps,
+            	repo, new ArtifactCoordinates("net.jini","jsk-platform")
+            }),
 	        "org.dancres.blitz.remote.BlitzServiceImpl",
           	new String[] { home + "${/}bin${/}blitz${/}configs${/}blitz.config" }),
 
-  
-    		/* SORCER Job Service */
+
+		// MutualExclusion - Locker
+  		new SorcerServiceDescriptor(
+           "lockmgr-dl.jar",
+           policy, 
+            ConfigUtil.concat(new Object[] {
+            	blitzLib, "${/}lockmgr.jar",
+            	ps, otherLib, "${/}jgroups.jar",
+            	ps, home, "${/}lib${/}river${/}lib-dl${/}outrigger-dl.jar",
+            	ps, jiniLibPath, "${/}jsk-platform.jar" }
+            	),
+            "org.dancres.blitz.jini.lockmgr.ServerImpl",
+             new String[] { home + "${/}bin${/}blitz${/}configs${/}lockmgr.config" }),
+ 
+   		// SORCER Job Service 
        		SorcerDescriptorUtil.getJobber(
-       			policy, 
-       			home + "${/}bin${/}sorcer${/}jobber${/}configs${/}jobber-prv.config"),
+       			policy,
+       			home + "${/}modules${/}providers${/}jobber${/}jobber-service${/}src${/}main${/}resources${/}META-INF${/}sorcer${/}services.config"),
+   
+     		// SORCER Space Service
+       		SorcerDescriptorUtil.getSpacer(
+       			policy,
+       			home + "${/}modules${/}providers${/}spacer${/}spacer-service${/}src${/}main${/}resources${/}META-INF${/}sorcer${/}services.config"), 
+
     
-     		/* SORCER Space Service */
-        		SorcerDescriptorUtil.getSpacer(
+       		// SORCER Catalog Service
+      		SorcerDescriptorUtil.getCataloger(
        			policy, 
-       			home + "${/}bin${/}sorcer${/}jobber${/}configs${/}spacer-prv.config"),
-       
-       		/* SORCER Catalog Service */
-  /*     		SorcerDescriptorUtil.getCataloger(
-       			policy, 
-       			home + "${/}bin${/}sorcer${/}cataloger${/}configs${/}cataloger-prv.config"),
-   */    			
-       		/* SORCER Logger Service */
+       			home + "${/}modules${/}providers${/}cataloger${/}cataloger-service${/}src${/}main${/}resources${/}META-INF${/}sorcer${/}services.config"),
+     			
+       		// SORCER Logger Service
        		SorcerDescriptorUtil.getLogger(
        			policy, 
-       			home + "${/}bin${/}sorcer${/}logger${/}configs${/}logger-prv.config"),
-       			
-       		/* SORCER ExertMonitor Service */
+       			home + "${/}modules${/}providers${/}logger${/}logger-service${/}src${/}main${/}resources${/}META-INF${/}sorcer${/}services.config"),
+      			
+       		// SORCER ExertMonitor Service
        		SorcerDescriptorUtil.getExertMonitor(
        			policy, 
-       			home + "${/}bin${/}sorcer${/}exertmonitor${/}configs${/}exertmonitor-prv.config"),
+       			home + "${/}modules${/}providers${/}exertmonitor${/}exertmonitor-service${/}src${/}main${/}resources${/}META-INF${/}sorcer${/}services.config"),
        			
-       		/* SERVME QosCatalog Service */
-       		SorcerDescriptorUtil.getQosCataloger(
+       		// SORCER Database Store Service
+       		SorcerDescriptorUtil.getDatabaseStorer(
        			policy, 
-       			home + "${/}bin${/}servme${/}configs${/}qoscataloger-prv.config"),
-       			
-       		/* SERVME SlaMonitor Service */
-       		SorcerDescriptorUtil.getSlaMonitor(
-       			policy, 
-       			home + "${/}bin${/}servme${/}configs${/}slamonitor-prv.config"),
-       			
-       		/* SERVME OnDemandProvisioner Service */
-       		SorcerDescriptorUtil.getOnDemandProvisioner(
-       			policy, 
-       			home + "${/}bin${/}servme${/}configs${/}ondemandprovisioner-prv.config")
+       			home + "${/}modules${/}providers${/}dbp${/}dbp-service${/}src${/}main${/}resources${/}META-INF${/}sorcer${/}services.config")
+ 
     };
 }
