generating codebase for provider remove deprecated modules from 'first' example
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@290 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/modules/examples/first/first-prv/src/main/resources/META-INF/sorcer/services.config
+++ b/iGrid/modules/examples/first/first-prv/src/main/resources/META-INF/sorcer/services.config
@@ -28,8 +28,7 @@ com.sun.jini.start {
 							      }),
 
 	      new SorcerServiceDescriptor(
-			      ""+new ArtifactCoordinates("org.sorcersoft.sorcer","first-api","1.0-SNAPSHOT")
- 			     +" "+new ArtifactCoordinates("org.sorcersoft.sorcer","sorcer-api","11.1"),
+			      "${provider.codebase}",
 		  policy,
 		  ConfigUtil.concat(new Object[] {
 		      repo, new ArtifactCoordinates("org.sorcersoft.sorcer","first-api","1.0-SNAPSHOT"), ps,
