--- a/iGrid/modules/examples/first/first-api/pom.xml
+++ b/iGrid/modules/examples/first/first-api/pom.xml
@@ -16,7 +16,7 @@
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sorcer-api</artifactId>
-            <version>11.1</version>
+            <version>${v.sorcer}</version>
         </dependency>
     </dependencies>
 </project>
