--- a/iGrid/modules/examples/first/first-proxy/pom.xml
+++ b/iGrid/modules/examples/first/first-proxy/pom.xml
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sorcer-api</artifactId>
-            <version>11.1</version>
+            <version>${v.sorcer}</version>
         </dependency>
     </dependencies>
 </project>
