--- a/iGrid/modules/tools/sorcer-maven-plugin/pom.xml
+++ b/iGrid/modules/tools/sorcer-maven-plugin/pom.xml
@@ -17,14 +17,20 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.sorcersoft.sorcer</groupId>
+			<artifactId>boot</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.apache.maven</groupId>
 			<artifactId>maven-plugin-api</artifactId>
-			<version>3.0.5</version>
+			<version>3.0.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.maven</groupId>
 			<artifactId>maven-core</artifactId>
-			<version>3.0.5</version>
+			<version>3.0.4</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.maven.plugin-tools</groupId>
@@ -32,16 +38,16 @@
 			<version>3.2</version>
 			<scope>provided</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.codehaus.plexus</groupId>
-			<artifactId>plexus-utils</artifactId>
-			<version>3.0.8</version>
-		</dependency>
 
 		<dependency>
-			<groupId>org.sorcersoft.sorcer</groupId>
-			<artifactId>boot</artifactId>
-			<version>${project.version}</version>
+			<groupId>com.google.code.findbugs</groupId>
+			<artifactId>jsr305</artifactId>
+			<version>2.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.sonatype.aether</groupId>
+			<artifactId>aether-util</artifactId>
+			<version>1.13.1</version>
 		</dependency>
 
 		<dependency>
