--- a/iGrid/sos/sos-env/pom.xml
+++ b/iGrid/sos/sos-env/pom.xml
@@ -29,5 +29,12 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.sorcersoft.sorcer</groupId>
+			<artifactId>dependencies</artifactId>
+			<version>${project.version}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
