--- a/iGrid/examples/ex3/ex3-req/pom.xml
+++ b/iGrid/examples/ex3/ex3-req/pom.xml
@@ -10,7 +10,6 @@
         <version>11.1</version>
     </parent>
 
-    <groupId>org.sorcersoft.sorcer</groupId>
     <artifactId>ex3-req</artifactId>
     <name>SORCER examples :: ex3 :: req</name>
 
@@ -23,8 +22,9 @@
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sos-platform</artifactId>
-        	<version>${project.version}</version>
-        </dependency>        <dependency>
+	    <version>${project.version}</version>
+        </dependency>
+	<dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>commons-req</artifactId>
             <version>${project.version}</version>
