--- a/iGrid/examples/ex6/ex6-prv/src/main/resources/META-INF/sorcer/services.config
+++ b/iGrid/examples/ex6/ex6-prv/src/main/resources/META-INF/sorcer/services.config
@@ -5,9 +5,10 @@ import sorcer.provider.boot.Booter;
 import sorcer.provider.boot.SorcerDescriptorUtil;
 import sorcer.provider.boot.SorcerServiceDescriptor;
 import sorcer.util.ArtifactCoordinates;
+import sorcer.core.SorcerEnv;
 	
 com.sun.jini.start {
-	home = "${iGrid.home}";
+	home = "${sorcer.home}";
 	policy = "${java.security.policy}";
 	ps = System.getProperty("path.separator");
 	
@@ -15,8 +16,8 @@ com.sun.jini.start {
 	jiniLibPath 	= home + "${/}lib${/}river${/}lib";
 	jiniLibDLPath 	= home + "${/}lib${/}river${/}lib-dl";
 	deployPath 	= home + "${/}deploy";
-	repo 		= "${user.home}/.m2/repository/";
-    
+    repo = SorcerEnv.getRepoDir() + "/";
+
 	//port = Booter.getWebsterPort(); 
 	port = 0;
 	//address = Booter.getWebsterInterface();
