Updated scripts, ExertionRunner and ArtifactCoordinates to enable examples
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@310 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/sos-providers/pom.xml
+++ b/iGrid/sos-providers/pom.xml
@@ -10,7 +10,7 @@
 		<artifactId>modules</artifactId>
 	</parent>
 
-	<artifactId>providers</artifactId>
+	<artifactId>sos-providers</artifactId>
 	<packaging>pom</packaging>
 	<name>SORCER OS :: providers</name>
 	<description>SORCER</description>
