Updated scripts, ExertionRunner and ArtifactCoordinates to enable examples
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@311 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/configs/boot-sorcer-min.config
+++ b/iGrid/configs/boot-sorcer-min.config
@@ -38,7 +38,7 @@ com.sun.jini.start {
     serviceDescriptors = new ServiceDescriptor[] {
         /* SORCER Webster, set to serve up 10 directories */
         // (String policy, int port, String[] roots, String address, int startPort, int endPort, boolean debug, boolean isDaemon)
-        SorcerDescriptorUtil.getWebster(policy,
+        /*SorcerDescriptorUtil.getWebster(policy,
                                          port,
                                          new String[] { 
                                                         jiniLibPath,
@@ -51,6 +51,7 @@ com.sun.jini.start {
                                          endPort,
                                          true,
                                          false),
+                                         */
 
 /*
         new SorcerServiceDescriptor(
