Cleanup poms - remove some unused dependencies and format xml
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@313 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/examples/first/first-api/pom.xml
+++ b/iGrid/examples/first/first-api/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <artifactId>first-api</artifactId>
-    <name>SORCER first :: api</name>
+    <name>SORCER examples :: first :: api</name>
 
     <dependencies>
         <dependency>
