--- a/iGrid/examples/first/pom.xml
+++ b/iGrid/examples/first/pom.xml
@@ -11,11 +11,7 @@
 	<artifactId>first</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	<name>SORCER first</name>
-
-	<properties>
-		<v.sorcer>11.1</v.sorcer>
-	</properties>
+	<name>SORCER examples :: first</name>
 
     <modules>
         <module>first-api</module>
