--- a/iGrid/pom.xml
+++ b/iGrid/pom.xml
@@ -12,6 +12,7 @@
     <url>http://sorcersoft.org/</url>
 
     <properties>
+		<v.sorcer>11.1</v.sorcer>
         <v.jini>2.2.1</v.jini>
         <v.blitz>2.1.7</v.blitz>
         <v.sleepycat>4.1.21</v.sleepycat>
@@ -26,7 +27,7 @@
         <module>sos</module>
         <module>sos-providers</module>
         <module>tools</module>
-        <module>examples</module>        
+        <module>examples</module>
     </modules>
 
     <dependencyManagement>
@@ -44,7 +45,7 @@
             <dependency>
                 <groupId>org.sorcersoft.sorcer</groupId>
                 <artifactId>sos-platform</artifactId>
-                <version>${project.version}</version>
+                <version>${v.sorcer}</version>
             </dependency>
             <dependency>
                 <groupId>org.rioproject</groupId>
@@ -88,8 +89,7 @@
 
     <build>
         <pluginManagement>
-            <plugins>
-<!--                Temporarily disabled because of a problem when building from scratch
+			<plugins>
 				<plugin>
 					<groupId>${project.groupId}</groupId>
 					<artifactId>sorcer-maven-plugin</artifactId>
@@ -102,59 +102,59 @@
 					</executions>
 				</plugin>
 				<plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>exec-maven-plugin</artifactId>
-                    <version>1.2.1</version>
-		  </plugin> -->
-                <plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>exec-maven-plugin</artifactId>
+					<version>1.2.1</version>
+				</plugin>
+				<plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
                     <version>2.3.2</version>
                 </plugin>
-		<plugin>
-		  <groupId>org.bitstrings.maven.plugins</groupId>
-		  <artifactId>dependencypath-maven-plugin</artifactId>
-		  <version>1.1.1</version>
-		</plugin>
-            </plugins>
-        </pluginManagement>
-        <plugins>
-	    <plugin>
-	      <artifactId>maven-clean-plugin</artifactId>
-	      <version>2.5</version>
-	      <configuration>
-		<filesets>
-		  <fileset>
-		    <directory>databases</directory>
-		    <includes>
-		      <include>**/*</include>
-		      <include>**/*</include>
-		    </includes>
-		    <followSymlinks>false</followSymlinks>
-		  </fileset>
-		  <fileset>
-		    <directory>logs/</directory>
-		    <includes>
-		      <include>remote/*</include>
-		      <include>*</include>
-		    </includes>
-		    <excludes>
-		      <exclude>remote</exclude>
-		    </excludes>
-		    <followSymlinks>false</followSymlinks>
-		  </fileset>
-		</filesets>
-	      </configuration>
-	    </plugin>
-<!--	    <plugin>
-	      <groupId>org.apache.maven.plugins</groupId>
-	      <artifactId>maven-surefire-plugin</artifactId>
-		<configuration>
-		  <systemPropertyVariables>
-		      <SORCER_HOME>${sorcer.home}</SORCER_HOME>
-		  </systemPropertyVariables>
-		</configuration>
-	    </plugin>-->
+				<plugin>
+					<groupId>org.bitstrings.maven.plugins</groupId>
+					<artifactId>dependencypath-maven-plugin</artifactId>
+					<version>1.1.1</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+		<plugins>
+			<plugin>
+				<artifactId>maven-clean-plugin</artifactId>
+				<version>2.5</version>
+				<configuration>
+					<filesets>
+					<fileset>
+						<directory>databases</directory>
+						<includes>
+							<include>**/*</include>
+							<include>**/*</include>
+						</includes>
+						<followSymlinks>false</followSymlinks>
+					</fileset>
+						<fileset>
+							<directory>logs/</directory>
+							<includes>
+								<include>remote/*</include>
+								<include>*</include>
+							</includes>
+							<excludes>
+								<exclude>remote</exclude>
+							</excludes>
+							<followSymlinks>false</followSymlinks>
+						</fileset>
+					</filesets>
+				</configuration>
+			</plugin>
+			<!--	    <plugin>
+					  <groupId>org.apache.maven.plugins</groupId>
+					  <artifactId>maven-surefire-plugin</artifactId>
+					<configuration>
+					  <systemPropertyVariables>
+						  <SORCER_HOME>${sorcer.home}</SORCER_HOME>
+					  </systemPropertyVariables>
+					</configuration>
+					</plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
