Cleanup poms - fix artifact ids and format xml
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@314 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/examples/ex5/ex5-prv/pom.xml
+++ b/iGrid/examples/ex5/ex5-prv/pom.xml
@@ -10,7 +10,7 @@
         <version>11.1</version>
     </parent>
 
-    <artifactId>ex5-service</artifactId>
+    <artifactId>ex5-prv</artifactId>
     <name>SORCER examples :: ex5 :: prv</name>
     
     <dependencies>
