--- a/iGrid/examples/first/first-prv/pom.xml
+++ b/iGrid/examples/first/first-prv/pom.xml
@@ -11,8 +11,7 @@
 	</parent>
 
 	<artifactId>first-prv</artifactId>
-	<packaging>jar</packaging>
-	<name>SORCER examples :: first :: prvovider</name>
+	<name>SORCER examples :: first :: provider</name>
 	<description>SORCER</description>
 	<url>http://sorcersoft.org/</url>
 
@@ -52,18 +51,15 @@
 	</dependencies>
 	<build>
 		<plugins>
+<!--
 			<plugin>
 				<groupId>org.sorcersoft.sorcer</groupId>
 				<artifactId>sorcer-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<goals>
-							<goal>sorcer</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
+-->
 		</plugins>
+
+		<!-- Enable maven filter feature for all *.groovy and *.config files in the src/main/resources -->
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
