--- a/iGrid/sos-providers/cataloger/pom.xml
+++ b/iGrid/sos-providers/cataloger/pom.xml
@@ -3,9 +3,9 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>providers</artifactId>
         <groupId>org.sorcersoft.sorcer</groupId>
-        <version>11.1</version>
+		<artifactId>sos-providers</artifactId>
+		<version>11.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
