--- a/iGrid/sos-providers/jobber/pom.xml
+++ b/iGrid/sos-providers/jobber/pom.xml
@@ -3,9 +3,9 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
     <parent>
-        <artifactId>providers</artifactId>
         <groupId>org.sorcersoft.sorcer</groupId>
-        <version>11.1</version>
+		<artifactId>sos-providers</artifactId>
+		<version>11.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
