--- a/iGrid/sos-providers/pom.xml
+++ b/iGrid/sos-providers/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.sorcersoft.sorcer</groupId>
 		<version>11.1</version>
-		<artifactId>modules</artifactId>
+		<artifactId>sorcer-root</artifactId>
 	</parent>
 
 	<artifactId>sos-providers</artifactId>
