--- a/iGrid/sos/commons-req/pom.xml
+++ b/iGrid/sos/commons-req/pom.xml
@@ -1,31 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <parent>
-        <artifactId>sos</artifactId>
-        <groupId>org.sorcersoft.sorcer</groupId>
-        <version>11.1</version>
-    </parent>
+	<parent>
+		<artifactId>sos</artifactId>
+		<groupId>org.sorcersoft.sorcer</groupId>
+		<version>11.1</version>
+	</parent>
 
-    <artifactId>commons-req</artifactId>
-    <name>SORCER OS :: commons-req</name>
+	<artifactId>commons-req</artifactId>
+	<name>SORCER OS :: commons-req</name>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>sos-platform</artifactId>
-        	<version>${project.version}</version>
-        </dependency>		<dependency>
+	<dependencies>
+		<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
-			<artifactId>webster</artifactId>
+			<artifactId>sos-platform</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-        <dependency>
-            <groupId>org.codehaus.groovy</groupId>
-            <artifactId>groovy-all</artifactId>
-        </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>org.sorcersoft.sorcer</groupId>
+			<artifactId>sos-webster</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.codehaus.groovy</groupId>
+			<artifactId>groovy-all</artifactId>
+		</dependency>
+	</dependencies>
 </project>
