--- a/iGrid/tools/sos-shell/pom.xml
+++ b/iGrid/tools/sos-shell/pom.xml
@@ -29,7 +29,7 @@
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
-            <artifactId>webster</artifactId>
+            <artifactId>sos-webster</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
