add sigar-base local IP resolver - currently unused
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@319 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/tools/pom.xml
+++ b/iGrid/tools/pom.xml
@@ -23,6 +23,7 @@
 		<module>sos-shell</module>
 		<module>browser</module>
 		<module>sorcer-maven-plugin</module>
+		<module>sos-localhost</module>
 
 		<!-- force download implicit dependencies -->
 		<module>dependencies</module>
