bring back provider archetype
git-svn-id: https://svn.smtsoftware.com/sorcer/branches/maven@320 5dc8b5b5-2d95-451b-a4db-33bd0ba970db

--- a/iGrid/tools/pom.xml
+++ b/iGrid/tools/pom.xml
@@ -24,6 +24,7 @@
 		<module>browser</module>
 		<module>sorcer-maven-plugin</module>
 		<module>sos-localhost</module>
+		<module>sorcer-provider</module>
 
 		<!-- force download implicit dependencies -->
 		<module>dependencies</module>
